fix(title/icon): correctly set the icon when missing message
There was an issue where the icon would be overlapping the notification if the message was empty. This properly applies the icon on the same level as the title

--- a/nui/SimpleNotification/notification.css
+++ b/nui/SimpleNotification/notification.css
@@ -452,6 +452,10 @@
     float: right;
 }
 
-.gn-icon {
+.gn-text-icon {
     margin-left: 0.5rem;
+}
+
+.gn-title-icon {
+    margin: 0 0.5rem;
 }
